--- a/index.html
+++ b/index.html
@@ -4,20 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🎨 Nano Banana Image Generator on Cloudflare Workers with R2</title>
+    <title>📰 I was there! A day in history image generator</title>
   </head>
   <body>
-    <div id="root"></div>
-    
-    <!-- Sticky Footer -->
-    <footer class="sticky-footer">
-      <div class="footer-content">
-        <a href="https://github.com/elizabethsiegle/nano-banana-image-gen-cf-worker" target="_blank" rel="noopener noreferrer">
-          <span>🐙</span> 👀 on GitHub
-        </a>
-      </div>
-    </footer>
-    
+    <div id="root"></div>    
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
